updated swagger and added db_conn calls
